crates/pardosa-schema/tests/compile_fail/box_genome_safe.rs
use pardosa_schema::GenomeSafe;

fn main() {
    let _ = <Box<u32> as GenomeSafe>::SCHEMA_HASH;
}
